<resources>
    <string name="app_name">Vermicompost</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="my_score_textview">My Score</string>
    <string name="temperature_label_textview">Temperature</string>
    <string name="default_temperature_value">No Data</string>
    <string name="humidity_label_textview">Humidity</string>
    <string name="airQuality_label_textview">Air Quality</string>
    <string name="pressure_label_textview">Air Pressure</string>
    <string name="update_data_button">Update Data</string>
</resources>
